Added new slides

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,11 @@ figure.banner2 img{
     height:80%;
 }
 
+figure.banner3 img{
+    height:60%;
+}
+
+
 figure.small-banner img{
     height:450px;
 }
