--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,10 @@ figure.banner4 img{
     height:15%;
     margin: 0;
 }
-
+figure.banner5 img{
+    height:90%;
+    margin: 0;
+}
 .para{
     font-size: 14pt;
 }
